syntax = "proto3";

package sec11;

import "google/protobuf/empty.proto";


option java_package = "ru.nvn.models.sec11";
option java_multiple_files = true;



message BalanceCheckRequest{
  int32 account_number = 1;

}

message AccountBalance{
  int32 account_number = 1;
  int32 balance = 2;
}

message AllAccountsResponse{
  repeated AccountBalance accounts = 1;
}



message WithDrawRequest{
  int32 account_number = 1;
  int32 amount = 2;
}

message Money{
  int32 amount = 1;
}

service BankService{
  // unary
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);

  // server streaming
  rpc Withdraw(WithDrawRequest) returns (stream Money);

}

